[gd_scene load_steps=5 format=3 uid="uid://cv8dg2gtohofb"]

[ext_resource type="Texture2D" uid="uid://xq8tf04kqcf4" path="res://assets/Ship parts/cannonBall.png" id="1_iufhq"]
[ext_resource type="Script" uid="uid://60spyqjcbji6" path="res://src/projectiles/cannon_ball/cannon_ball.gd" id="1_n02ov"]
[ext_resource type="AudioStream" uid="uid://qfcuqfi5xkj4" path="res://assets/Sound/hit.wav" id="3_syvwo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3813t"]
radius = 4.12311

[node name="CannonBall" type="RigidBody2D"]
z_index = -2
collision_layer = 8
collision_mask = 14
contact_monitor = true
max_contacts_reported = 50
linear_damp = 0.25
script = ExtResource("1_n02ov")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3813t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_iufhq")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_syvwo")
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
